--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <h1>URL Shortener Microservice</h1>
     <main>
       <section>
-        <form action="api/shorturl" method="POST">
+        <form action="/api/shorturl" method="POST">
           <fieldset>
             <legend>URL Shortener</legend>
             <label for="url_input">URL:</label>
@@ -25,7 +25,10 @@
         </form>
       </section>
     </main>
+
     <footer>
+      <h1>Example Usage:</h1>
+      <a href="/api/shorturl/3">[this_project_url]/api/shorturl/3</a>
       <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
     </footer>
   </body>
